# ticktick-mcp-v2

./: .gitignore  .gitmodules  LICENSE  README.md  README_zh.md  env.template  pyproject.toml  requirements.txt
.cursor/: mcp.json
.github/workflows/: python-publish.yml
docs/: architecture.md
src/: __init__.py  auth.py  cli.py  server.py
src/adapters/: __init__.py  client.py
src/tools/: __init__.py  auth.py  projects.py  tasks.py
src/utils/: __init__.py  helpers.py  timezone_utils.py
tests/: README.md  README_test.md  conftest.py  run_tests.py  test_mcp_parameter_handling.py  test_timezone_utils.py
tests/e2e/: test_complete_workflow.py  test_real_world_scenarios.py
tests/integration/: test_full_integration.py  test_mcp_server_modern.py
tests/performance/: test_performance.py
tests/unit/: test_adapters.py  test_auth.py  test_fixes_validation.py  test_tools.py  test_tools_comprehensive.py
